Improvements to RunProcess and GPJar. These are to handle the new requirements of the Ziniki Developer Mode - expanding Jar files and starting processes with environment variables.